--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,4 @@
-ErrorDocument 404 http://pillme/404.php
+RewriteEngine on
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule . index.php [L]
