--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,13 @@
 RewriteEngine on
+##ErrorDocument 404 http://pillme/404.php
+#RewriteCond %{REQUEST_FILENAME} !-d
+#RewriteCond %{REQUEST_FILENAME} !-f
+#RewriteRule  . index.php [L]
+#RewriteRule index.php [L]
+RewriteCond %{REQUEST_FILENAME} -d
+#RewriteCond %{REQUEST_FILENAME} -f
+RewriteRule  . 404.php [L]
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule . index.php [L]
+#RewriteRule  . 404.php [L]
+RewriteRule  . index.php [L]
